auth_reject_mismatching_logical_times.js fails when two phase index builds are enabled

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-10-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When two phase index builds are enabled, this test seems to run indefinitely due to an incompatibility between the new style index builds and the indexes built implicitly in the config servers.

            Assignee:
            Benety Goh
            Reporter:
            Benety Goh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: