SERVER-43416 support single-phase secondary index builds for createIndexes oplog entries